@@ -100,7 +100,7 @@
                           <string>Discount</string>
                         </tuple>
                         <tuple>
-                          <string>base_application_title</string>
+                          <string>base_application_title_list</string>
                           <string>Base Application</string>
                         </tuple>
                       </list>
