@@ -104,7 +104,7 @@
                           <string>Tax</string>
                         </tuple>
                         <tuple>
-                          <string>base_application_title</string>
+                          <string>base_application_title_list</string>
                           <string>Base Application</string>
                         </tuple>
                       </list>
