@@ -1,3 +1,6 @@
+2008-12-9 yusei
+* Display all selected business applications in listbox.
+
 2008-11-13 yusei
 * Start to develop version 5.4.
 
